k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service-nodeport
  namespace: python-app
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30500
